--- a/Covid-Tracker/src/index.css
+++ b/Covid-Tracker/src/index.css
@@ -1,13 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap");
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 
-body{
-  width: 100vw;
-  max-width: 100vw;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
   overflow-x: hidden;
+  min-height: 100vh;
 }
